src/app/lander/lander.component.scss
header {
    width: 100%;
    padding-bottom: 20%;
    position: relative;

    div {
        position: absolute;
        width: 100%;
        height: 100%;
        background-color: #333333;
        color: white;
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;
    }
}

ol {
    width: 100%;
    display: flex;
    justify-items: center;
    flex-wrap: wrap;
}

li {
    width: 20%;
    padding-bottom: 20%;
    position: relative;

    p {
        position: absolute;
        bottom: 0;
        background: rgba(0, 0, 0, .75);
        color: white;
        width: 95%;
        height: 20%;
        padding: 0 2.5%;
        display: flex;
        align-items: center;
    }

    &:hover img {
        transform: scale(1.1);
    }
}

.member {
    position: absolute;
    display: flex;
    height: 100%;
    width: 100%;
    background-position: center;
    background-size: cover;
    align-items: center;
    justify-content: center;
    overflow: hidden;

    img {
        height: 100%;
        will-change: transform;
        transition: transform 500ms;
    }
}

h1 {
  text-align: center;
}

@media (max-width: 1000px) {
  li {
    width: 25%;
    padding-bottom: 25%;
  }
}

@media (max-width: 800px) {
  li {
    width: 33.33%;
    padding-bottom: 33.33%;
  }
}

@media (max-width: 500px) {
  header {
    padding-bottom: 40%;
  }

  li {
    width: 100%;
    padding-bottom: 40%;
  }

  .member img {
    width: 100%;
    height: auto;
  }
}

